syntax = "proto3";

package protos.steps;

option go_package = "github.com/streamdal/snitch-protos/build/go/protos/steps";


message InferSchemaStep {
  bytes current_schema = 1;
}
